# scratchpad

./: .gitattributes  .gitignore  .gitmodules  README.md
aoc-2023/1/: main.go
aoc-2023/2/: input.txt
azure/aks-demo/: README.md
azure/aks-demo/manifests-demo-app/: redis-service.yaml  web-deployment.yaml  web-service.yaml
c-cpp/: .gitignore  README.md
c-cpp/basics/: .gitignore
c-cpp/basics/01-hello-world/: build.sh  hello-world.cpp
c-cpp/basics/02-primitive-types/: primitive-types.cpp
c-cpp/basics/03-basic-io/: basic-io.cpp
c-cpp/basics/04-functions/: functions.cpp  functions.hpp
c-cpp/basics/05-uniform-init/: uniform-init.cpp
c-cpp/basics/06-pointers/: pointers.cpp
c-cpp/basics/hello-world/: main.cpp
c-cpp/cmake/01-simple/: CMakeLists.txt
c-cpp/cmake/02-library/: CMakeLists.txt  main.cpp
c-cpp/cmake/02-library/lib/my_math/: CMakeLists.txt  build.sh
c-cpp/cmake/02-library/lib/my_math/include/my_math/: add.h  subtract.h
c-cpp/cmake/02-library/lib/my_math/src/: add.cpp
c-cpp/cmake/02-library/lib/my_math/test/: main.cpp
c-cpp/cmake/03-library-with-gtest/: CMakeLists.txt
c-cpp/cmake/03-library-with-gtest/src/: subtract.cpp
c-cpp/cmake/03-library-with-gtest/test/: main.cpp
c-cpp/make/01-simple/: Makefile
c-cpp/make/02-make-into-subdirs/: Makefile
c-cpp/make/02-make-into-subdirs/src/: main.cpp
cryptopals-challenges/: README.md
cryptopals-challenges/set-1/challenge-1/: bash.sh  python.py
cryptopals-challenges/set-1/challenge-2/: python.py
cryptopals-challenges/set-1/challenge-2/c/: main.c
cryptopals-challenges/set-1/challenge-3/: python.py  test.py
csharp/: README.md
csharp/asp.net-rest-api-minimum/: WeatherForecast.cs  asp.net-rest-api-minimum.csproj
csharp/asp.net-rest-api-minimum/Controllers/: WeatherForecastController.cs
csharp/asp.net-rest-api-minimum/Properties/: launchSettings.json
csharp/console-bare-minimum/: Program.cs  new-console-app.csproj
csharp/grpc/: README.md
csharp/grpc/client/grpc-client-csharp/: grpc-client-csharp.sln
csharp/grpc/client/grpc-client-csharp/grpc-client-csharp/: Program.cs  grpc-client-csharp.csproj
csharp/grpc/server/: grpc.sln
csharp/grpc/server/grpc/: Program.cs
csharp/grpc/server/grpc/Properties/: launchSettings.json
csharp/grpc/server/grpc/Services/: GreeterService.cs
csharp/signalr-getting-started/: README.md  signalr-getting-started.sln
csharp/signalr-getting-started/signalr-getting-started/: Program.cs  signalr-getting-started.csproj
csharp/signalr-getting-started/signalr-getting-started/Hubs/: ChatHub.cs
csharp/signalr-getting-started/signalr-getting-started/Pages/: Error.cshtml.cs  Index.cshtml.cs  Privacy.cshtml.cs  _ViewImports.cshtml
csharp/signalr-getting-started/signalr-getting-started/Pages/Shared/: _Layout.cshtml
csharp/signalr-getting-started/signalr-getting-started/Properties/: launchSettings.json
csharp/signalr-getting-started/signalr-getting-started/wwwroot/js/: chat.js
docker-hollywood/: dockerfile
frigate/: .gitignore  docker-run.sh
frigate/config/: config.yml
git/: Fix-Commit-Messages.md  LFS.md
go/goFabian/: go.mod  main.go  main_test.go
gps/: .gitignore  README.md  projections.ipynb
hcloud/simple-lb-webserver/: .terraform.lock.hcl  README.md  main.tf  vm_cloud_init_config.yaml
jupyter/: jupyter.md
kubernetes/: README.md  deployment_demo.yml  dockerfile  makefile  minimal_deployment_demo.yml
kubernetes/kind-cnpg-quickstart/: README.md  cluster-example.yaml  grafana-dashboard.json  kube-stack-config.yaml  prometheus-rules.yaml
kubernetes/kind-helloworld/: README.md
kubernetes/rabbitmq-example/: start-kind.sh
kubernetes/rabbitmq-example/publisher/: dockerfile  k8s-template.yaml  publisher.go
kubernetes/rabbitmq-example/rabbitmq-chart/: values.yaml
kubernetes/rabbitmq-example/rabbitmq-chart/templates/: configmap.yaml  rbac.yaml  secret.yaml  service.yaml  statefulset.yaml
linux-tools/xmlstarlet/: README.md  count-records.sh  table.xml
linux-tools/xmlstarlet/examples-svg/: README.md  add-element.sh  combine-svgs.sh  count-image-elements.sh  delete-element.sh  optimize.sh  select-element-with-id.sh
networking/: bgp.md  scan-ips.py
pulumi/quickstart-git-envs_azure_ts/: Pulumi.dev.yaml  Pulumi.yaml  README.md  index.html  index.ts  package-lock.json  package.json
pulumi/quickstart_azure_ts/: Pulumi.dev.yaml  Pulumi.yaml  README.md  index.ts  package-lock.json  package.json
rembg/: Dockerfile
ros2/: README.md
rust/hello-rust/: run-rust.sh
socketcan/: README.md
stm32/docker/: build.sh  dockerfile  run.sh
stm32/nucleo-wb15cc/prj-ble-hr/: CMakeLists.txt  README.md  prj-ble-hr.ioc  stm32wb15xx_flash_cm4.ld
stm32/nucleo-wb15cc/prj-ble-hr/Core/Inc/: app_conf.h  app_entry.h  hw_conf.h  main.h  (+3 more)
stm32/nucleo-wb15cc/prj-ble-hr/Drivers/: CMSIS  STM32WBxx_HAL_Driver
stm32/nucleo-wb15cc/prj-ble-hr/Utilities/: lpm  sequencer
stm32/nucleo-wb15cc/prj-ble-hr/cmake/: gcc-arm-none-eabi.cmake
stm32/nucleo-wb15cc/prj-ble-hr/cmake/stm32cubemx/: CMakeLists.txt
stm32/nucleo-wb15cc/prj-blinky/: CMakeLists.txt  README.md  STM32WB15_CM4.svd  openocd_st_nucleo_wb15.cfg  prj-blinky.ioc  stm32wb15xx_flash_cm4.ld
stm32/nucleo-wb15cc/prj-blinky/cmake/stm32cubemx/: CMakeLists.txt
typescript/hello-world/: README.md  package-lock.json  package.json  tsconfig.json
typescript/hello-world/src/: index.ts
video-streaming/: README.md
video-streaming/ingress-server/: Dockerfile  nginx.conf
video-streaming/streamer/: Dockerfile
vscode/devcontainer/terraform-github-module-https-clone/: README.md  main.tf
vscode/devcontainer/terraform-github-module-https-clone/.devcontainer/: Dockerfile  alpine.dockerfile  devcontainer.json
web/: README.md
web/basics-tailwind/: height.html  height2.html
web/data-streaming/websocket-client-browser-minimal/: listener.html
web/data-streaming/websocket-server-python/: server.py
web/react-tailwind/: README.md  package-lock.json  package.json
web/react-tailwind/src/: App.js  App.test.js
yolo-bg-remover/: README.md  main.py
yolo-bg-remover/.devcontainer/: devcontainer.json
(+22 files in other folders)
